  * The changemail script is now distributed with conary, and is called
    with a different calling convention; instead of being called once
    per trove with trove-specific command line options, it is called
    once per commit (of however many troves) and creates more readable
    summary email messages.  Remove --trove, --version, and --flavor
    arguments from your changemail invocations.

Changes in 0.60.6:
  * Erasing emerged troves works properly
  * Calling Doc() no longer disables the AutoDoc() policy.
  * A more reliable method is used for finding the port of an
    Apache connection

Changes in 0.60.5:
  * 'conary emerge' works again
  * Distributed group changesets failed when remote troves disappeared
    from the group
  * build logs are now tagged with 'buildlog' tag
  * Conary now handles cases when a directory becomes a symlink when
    applying a changeset.  An error message is displayed which tells the
    user how to apply the update.

Changes in 0.60.4:
  * An error in the automatic database conversion of 0.60.2 systems
    has been corrected.

Changes in 0.60.3:
  * Reimplemented LargeStreamSet in C
  * Added StreamCollection
  * Policies now announce their names in their information, warning,
    debug, and error messages, making it easier to determine how to
    resolve problems.
  * The database conversion for to 0.60.2 didn't work well; a proper
    conversion is now in place

Changes in 0.60.2:
  * Added InitialContent flag 
  * Fixed bug which caused servers to leak file descriptors when the sqldb
    was replaced
  * "repquery --deps" output fixed (broken in 0.60.1)
  * Added AutoDoc policy which finds common documentation files and puts
    them in %(thisdocdir)s automatically.
    AutoDoc is disabled by calling
    Doc without calling AutoDoc, which means that existing recipes that
    call Doc will not show changes.
  * getPackageBranchPathIds() now returns version and fileId as well,